k8s-pre-setup.yaml
#namespace
apiVersion: v1
kind: Namespace
metadata:
  name: loadtesting
#ECR
