k8s-game-backend.yaml
#game-writer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-backend
  namespace: loadtesting
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: game-backend
  template:
    metadata:
      labels:
        app: game-backend
    spec:
      containers:
      - name: game-backend
        #image: 755240510933.dkr.ecr.eu-west-2.amazonaws.com/v3:v3-game-v3
        image: 755240510933.dkr.ecr.eu-west-2.amazonaws.com/v3:v3-game-loadtest-v2
        #image:  755240510933.dkr.ecr.eu-west-2.amazonaws.com/v3:v3-game-v2.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 1337
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 1337
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 0.5Gi
          requests:
            cpu: 400m
            memory: 0.4Gi
        ports:
        - containerPort: 1337
          name: backend
      imagePullSecrets:
      - name: vecr
---
#backend-writer-service
apiVersion: v1
kind: Service
metadata:
  name: game-backend
  namespace: loadtesting
spec:
  type: NodePort
  ports:
  - name: backend
    protocol: TCP
    port: 1337
    targetPort: 1337
  selector:
    app: game-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: loadtesting
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  tls:
  - hosts:
    - load-writer.techops.co.in
    secretName: socket-ssl
  # ingressClassName: alb
  rules:
  - host: load-writer.techops.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-backend
            port:
              number: 1337
